@@ -263,9 +263,11 @@ Ext.extend(MODx.panel.TV,MODx.FormPanel,{
         this.getForm().setValues(r.result.object);
         
         var t = Ext.getCmp('modx-element-tree');
-        var c = Ext.getCmp('modx-tv-category').getValue();
-        var u = c != '' && c != null ? 'n_tv_category_'+c : 'n_type_tv'; 
-        t.refreshNode(u,true);
+        if (t) {
+            var c = Ext.getCmp('modx-tv-category').getValue();
+            var u = c != '' && c != null ? 'n_tv_category_'+c : 'n_type_tv';
+            t.refreshNode(u,true);
+        }
     }
     
     ,showParameters: function(cb,rc,i) {
