@@ -4,6 +4,7 @@ development release, and is only shown to give an idea of what's currently in th
 
 MODx Revolution 2.0.7-pl (January 14, 2011)
 ====================================
+- [#3472] Fix issue due to tree impr that prevented element saving success response
 - Improve loading of mgr pages by preventing trees from rendering until activated
 - [#3205] FC fixes: Ensure Resource Content field can have values set/renamed, that rules on create respect template, and that default values on create are set
 - [#3165] Fix issue where resource/updatefromgrid processor was missing published value if user does not have publish permission
